--- a/.env.box.sample
+++ b/.env.box.sample
@@ -8,4 +8,5 @@ SANMAR_FTP_FILENAME=sanmar_dip.txt
 # Box.com credentials
 BOX_CLIENT_ID=bapez65e9mnc3yg0yop17wy646pq57rs
 BOX_CLIENT_SECRET=wAZDgCAmVKOJH7PRbw1h74mDEs30uUZN
-BOX_FOLDER_ID=314832680593
+BOX_FOLDER_ID=0
+BOX_ENTERPRISE_ID=73197563
